@@ -1,10 +1,10 @@
 Changes
-examples/ex1.pl
-examples/ex2.pl
-examples/ex3.pl
-examples/ex4.pl
-examples/ex5.pl
-examples/ex6.pl
+examples/encode_attr_entities.pl
+examples/encode_newline.pl
+examples/preserve_test.pl
+examples/tags_output_example.pl
+examples/tags_output_raw_data_callback.pl
+examples/tags_output_raw_element.pl
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
 inc/Module/Install/AuthorTests.pm
