@@ -1,6 +1,7 @@
 0.15
  [Common]
  - Add explicit version for usage of List::Util.
+ - Rename example files to better names.
  - Update Module::Install to 1.21 version.
  - Update copyright years.
 
